<resources>
    <string name="app_name">Solitaire Solver 3000</string>
    <string name="header">Solitaire</string>
    <string name="helpBtn">Help</string>
    <string name="startBtn">Play</string>
    <string name="blackJackBtn">BlackJack</string>
    <string name="highscoreBtn">High score</string>
    <string name="group">CDIO - Gruppe 2</string>
    <string name="highscore">High score</string>
    <string name="won">Congratulations!\n You solved the Solitaire!</string>
    <string name="lost">Unfortunately you didn\'t solve the solitaire!</string>
    <string name="help">How to Play</string>
    <string name="scorePlacefiller">Score \nTime: \nMoves: </string>
    <string name="placefiller">1234\n420 seconds\n20</string>
    <string name="howtoplay">To play solitaire, try to get all of the cards into 4 foundation piles, 1 pile per suit, in ascending order from ace to king. Once you finish all 4 foundation piles, you win!
        \nTo set up the game, first place 1 card face up and 6 cards face down to the right. Repeat until every column has a face-up card at the bottom. Your final set up should look like this.
    </string>
    <string name="howtoplaylast">Put the remaining cards in a separate pile and set it either above or below the piles. This pile is where you will go to get more cards if you run out of moves. Look at the cards on the table that are face up. If there are any aces, place them above the seven piles. If there are no aces, rearrange the cards you have, moving only the face up cards. When you place a card on top (slightly lower so that you can still see both cards), it must be a different color than the card you are placing it on top of and have a value of one less. Thus, if you have a six of hearts, you can either place a five of spades or a five of clubs on top.[2]
\nKeep placing the cards on top of each other until you cannot move anymore.
\nEach pile should be alternating in color and move in descending order.
\n\n
Keep the top card obvious. The card on top of each of the seven piles should be face up. If you move a card, remember to turn the card underneath it over.
    \nBuild your piles using aces as foundations. If you have an ace above your cards, (eventually you should have all four aces there), you may move cards of the place cards of the corresponding suit on top of the pile in ascending (A, 2, 3, 4, 5, 6, 7, 8, 9, 10, J, Q, K) order.
    \nUse the reserve deck if you run out of moves to make. Flip over the top three cards, and see if the top one can be placed anywhere. Much of the time, there will an ace in there! If you put down the top card, see if you can put down the next. If you put down the second card, see if you can put down the last card. Then, if you put down the last card, put down another three cards from the reserve deck. If you cannot make a move with any of these cards, put them in a separate waste stack (taking care not to disturb the order). Repeat until your reserve deck has run out.
\nOnce your reserve deck runs out, use the waste stack. However, make sure that you do not shuffle it!

    Source: https://www.wikihow.com/Play-Solitaire</string>
</resources>
