<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LostGameActivity">

  <TextView
      android:id="@+id/headerTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:text="@string/lost"
      android:textAlignment="center"
      android:textColor="#021C18"
      android:textSize="40sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/score"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="20dp"
      android:text="@string/scorePlacefiller"
      android:textSize="24sp"
      app:layout_constraintEnd_toStartOf="@+id/valuesTV"
      app:layout_constraintTop_toBottomOf="@+id/headerTV" />

  <Button
      android:id="@+id/newGameBtn"
      android:layout_width="150dp"
      android:layout_height="60dp"
      android:text="New Game"
      android:textAllCaps="false"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/mainMenuBtn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/valuesTV" />

  <Button
      android:id="@+id/mainMenuBtn"
      android:layout_width="150dp"
      android:layout_height="60dp"
      android:layout_marginBottom="130dp"
      android:text="Main Menu"
      android:textAllCaps="false"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/valuesTV"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="90dp"
      android:text="@string/placefiller"
      android:textAlignment="textEnd"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="@+id/score"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/score" />



  </androidx.constraintlayout.widget.ConstraintLayout>